fix(CwFooter): fix alignment issue on sections

--- a/src/components/CwFooter.scss
+++ b/src/components/CwFooter.scss
@@ -25,6 +25,7 @@
     @media #{$mediaQuery-ld} {
       display: inline-block;
       width: 50%;
+      vertical-align: top;
 
       & + & {
         margin-top: 0;
